--- a/css/sheets-of-paper.css
+++ b/css/sheets-of-paper.css
@@ -1,12 +1,14 @@
-/*!
-* HTML-Sheets-of-Paper (https://github.com/delight-im/HTML-Sheets-of-Paper)
-* Copyright (c) delight.im (https://www.delight.im/)
-* Licensed under the MIT License (https://opensource.org/licenses/MIT)
-*/
-
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
-/* First postcard page containing address */
+/* Page CSS */
+.stamp {
+	position: absolute;
+	top: 10px;
+	right: 5px;
+	max-height: 80px;
+	max-width: 80px;
+}
+
 .address {
 	position: relative;
  	text-align: justify;
@@ -14,29 +16,24 @@
 }
 
 .address p {
- 	padding-top: 50%;
+ 	padding-top: 40%;
+	line-height: 3;
 }
 
-.body h1 {
+.calendar h1 {
 	position: relative;
 	text-align: justify;
 	text-align-last: center;
 }
 
 html, body {
-	/* Reset the document's margin values */
 	margin: 0;
-	/* Reset the document's padding values */
 	padding: 0;
-	/* Use the platform's native font as the default */
 	font-family: "Roboto", sans-serif;
-	/* Define a reasonable base font size */
 	font-size: 12pt;
-	/* Use a non-white background color to make the content areas stick out from the full page box */
-	background-color: #eee;
+	background-color: #EEEEEE;
 }
 
-/* Styles that are shared by all elements */
 * {
 	margin: 0;
 	padding: 0;
@@ -48,68 +45,47 @@ html, body {
 }
 
 .page {
-	/* Divide single pages with some space and center all pages horizontally */
 	margin: 1cm auto;
-	/* Define a white paper background that sticks out from the darker overall background */
-	background: #fff;
-	/* Show a drop shadow beneath each page */
+	background: #FFFFFF;
 	box-shadow: 0 4px 5px rgba(75, 75, 75, 0.2);
-	/* Override outline from user agent stylesheets */
 	outline: 0;
 }
 
-/* Defines a class for manual page breaks via inserted .page-break element */
 div.page-break {
 	page-break-after: always;
 }
 
-/* For top-level headings only */
 h1 {
-	/* Force page breaks after */
 	page-break-before: always;
 }
 
-/* For all headings */
 h1, h2, h3, h4, h5, h6 {
-	/* Avoid page breaks immediately */
 	page-break-after: avoid;
 }
 
-/* For all paragraph tags */
 p {
-	/* Reset the margin so that the text starts and ends at the expected marks */
 	margin: 0;
 }
 
-/* For adjacent paragraph tags */
 p + p {
-	/* Restore the spacing between the paragraphs */
 	margin-top: 0.5cm;
 }
 
-/* For links in the document */
 a {
-	/* Prevent colorization or decoration */
 	text-decoration: none;
 	color: black;
 }
 
-/* For tables in the document */
 table {
-	/* Avoid page breaks inside */
 	page-break-inside: avoid;
 }
 
 /* Calendar CSS */
-.pricing-table {
+.calendar-table {
 	width: 250%;
 	margin: 50px auto;
 	text-align: center;
 	padding-right: 100px;
-}
-
-.wrapper {
-	font-family: "Roboto",sans-serif;
 	line-height: 1;
 	font-size: 16px;
 }
@@ -127,80 +103,63 @@ table {
 }
 
 .title {
-	color: #fefefe;
+	color: #FEFEFE;
 	line-height: 2.5;
-}
-
-.business .title {
-	background: #E3536C;
 }
 
 .content {
 	position: relative;
-	color: #fefefe;
+	color: #FEFEFE;
 	padding: 20px 0 10px 0;
 }
 
-.business .content, .business .pt-footer {
-	background: #EB6379;
-}
-
-.features {
-	list-style-type: none;
-	background: #FFFFFF;
-	text-align: left;
-	color: #9c9c9c;
-	padding: 30px 22%;
-	font-size: 0.9rem;
-}
-
-.features li {
-	padding: 15px 0;
-	width: 100%;
-}
-
-.features li span {
-	padding-right: 0.4rem;
-}
-
-.price {
+.day {
 	position: relative;
 	display: inline-block;
 	margin-bottom: 0.62rem;
 }
 
-.hint {
-	font-style: italic;
-	font-size: 0.9rem;
-}
-
-.price sup {
-	font-size: 1.5rem;
-	position: absolute;
-	top: 12px;
-	left: -12px;
-}
-
-.price span {
+.day span {
 	font-size: 4.5rem;
 	letter-spacing: 8px;
 	font-weight: bold;
 }
 
-.professional .title {
-	background: #3EC6E0;
+.week {
+	font-style: italic;
+	font-size: 0.9rem;
 }
 
-.professional .content, .professional .pt-footer {
-	background: #53CFE9;
+.refuse .title {
+	background: #2C3E50;
 }
 
-.personal .title {
-	background: #78CFBF;
+.refuse .content {
+	background: #34495E;
 }
 
-.personal .content, .personal .pt-footer {
-	background: #82DACA;
+.recycling .title {
+	background: #2980B9;
+}
+
+.recycling .content {
+	background: #3498DB;
+}
+
+.garden .title {
+	background: #27AE60;
+}
+
+.garden .content {
+	background: #2ECC71;
+}
+
+.glass .title {
+	background: #16A085;
+}
+
+.glass .content {
+	background: #1ABC9C;
 }
 
 /* Use CSS Paged Media to switch from continuous documents to sheet-like documents with separate pages */
@@ -222,8 +181,7 @@ table {
 		/* Break cascading by using the !important rule */
 		/* These resets are absolute must-haves for the print styles and the specificity may be higher elsewhere */
 		width: initial !important;
-		min-height: initial !important;
-		max-height: initial !important;
+		height: initial !important;
 		margin: 0 !important;
 		padding: 0 !important;
 		border: initial !important;
